compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__add_missing_patterns_bool.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  let bool = True\n  case bool {}\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let bool = True
  case bool {}
  ▔▔▔▔▔↑      
}


----- AFTER ACTION

pub fn main() {
  let bool = True
  case bool {
    _ -> todo
}
}
