compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__add_missing_patterns_custom_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\ntype Wibble {\n  Wibble\n  Wobble\n  Wubble\n}\n\npub fn main() {\n  let wibble = Wobble\n  case wibble {\n    Wobble -> Nil\n  }\n}\n"
---
----- BEFORE ACTION

type Wibble {
  Wibble
  Wobble
  Wubble
}

pub fn main() {
  let wibble = Wobble
  case wibble {
  ▔▔▔▔▔↑       
    Wobble -> Nil
  }
}


----- AFTER ACTION

type Wibble {
  Wibble
  Wobble
  Wubble
}

pub fn main() {
  let wibble = Wobble
  case wibble {
    Wobble -> Nil
  
    Wibble -> todo
    Wubble -> todo
}
}
