compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__add_type_annotations_public_alias_to_internal_type_aliased_module.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport package as pkg\n\npub fn main() {\n  pkg.make_wibble()\n}\n"
---
----- BEFORE ACTION

import package as pkg

pub fn main() {
       ↑       
  pkg.make_wibble()
}


----- AFTER ACTION

import package as pkg

pub fn main() -> pkg.Wibble {
  pkg.make_wibble()
}
