compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__add_type_annotations_uses_internal_name_for_same_package.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport thepackage/internal\n\npub fn main() {\n  internal.Constructor\n}\n"
---
----- BEFORE ACTION

import thepackage/internal

pub fn main() {
       ↑       
  internal.Constructor
}


----- AFTER ACTION

import thepackage/internal

pub fn main() -> internal.Internal {
  internal.Constructor
}
